added with javascript

--- a/home.html
+++ b/home.html
@@ -96,11 +96,15 @@
     </div> 
     </div>
     </form>
+    <div>
+  <footer id="foot01"></footer>
+</div>
   </center>
+
       
 
     
-
+<script src="uni.js"></script>
 
   </body>
 </html>
